hphp/test/zend/bad/zend/constants_004.php
<?php

namespace foo;

const foo = 1;
const foo = 2;

?>